# Install-Wizard-Linux-Smoke-Test-Repo

./: .gitattributes  .gitignore  PHASE5_EXECUTION_PLAYBOOK.md  REMAINING_WORK_COMPLETION_PLAN.md  UNIFIED_CROSS_PLATFORM_INSTALLER_PLAN.md
installer-unified/: .gitattributes  Cargo.toml
installer-unified/LINUX_BUNDLE/: INSTALL  README.md
installer-unified/LINUX_BUNDLE/artifacts/: .gitkeep
installer-unified/LINUX_BUNDLE/checksums/: .gitkeep
installer-unified/LINUX_BUNDLE/logs/: .gitkeep
installer-unified/LINUX_BUNDLE/tui/: .gitkeep
installer-unified/docs/: INSTALL_LINUX.md  LINUX_BUNDLE_TESTS.md  SMOKE_TESTS.md
installer-unified/frontend/: index.html  package-lock.json  package.json  vite.config.ts
installer-unified/frontend/src/: App.css  App.tsx  index.css  types.ts  vite-env.d.ts
installer-unified/frontend/src/assets/: README.md
installer-unified/frontend/src/components/: Modal.css  Modal.tsx  PlatformChooser.css  PlatformChooser.tsx  StepIndicator.css  StepIndicator.tsx  WizardFrame.css  WizardFrame.tsx
installer-unified/frontend/src/lib/: api.ts  webview-bridge.ts
installer-unified/scripts/: build-linux.sh  make-linux-bundle.sh  print-artifacts.sh
installer-unified/src/: lib.rs  main.rs
installer-unified/src-tauri/: Cargo.toml  tauri.conf.json
installer-unified/src-tauri/src/: lib.rs  main.rs
installer-unified/src-tauri/src/api/: installer.rs  license.rs  mod.rs  preflight.rs  schema.rs  setup.rs
installer-unified/src-tauri/src/archiver/: mod.rs
installer-unified/src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  platform_db.rs  provisioning.rs  schema_mapping.rs  schema_verifier.rs
installer-unified/src-tauri/src/installation/: docker.rs  files.rs  linux.rs  linux_parsers.rs  mod.rs  service.rs  windows.rs
installer-unified/src-tauri/src/licensing/: mod.rs  offline.rs  online.rs  token.rs
installer-unified/src-tauri/src/models/: mod.rs  requests.rs  responses.rs  state.rs
installer-unified/src/api/: license.rs  mod.rs  preflight.rs  schema.rs  setup.rs
installer-unified/src/database/: connection.rs  migrations.rs  mod.rs  platform_db.rs  schema_verifier.rs
installer-unified/src/installation/: docker.rs  linux.rs  mod.rs  service.rs  windows.rs
installer-unified/src/licensing/: mod.rs  offline.rs  online.rs  token.rs
installer-unified/src/models/: mod.rs  requests.rs  responses.rs  state.rs
installer-unified/src/security/: crypto.rs  mod.rs  secret_protector.rs
installer-unified/src/utils/: logging.rs  mod.rs  os_detection.rs  path_resolver.rs  validation.rs
(+55 files in other folders)
